public/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');

/* GLOBAL VARIABLES */
:root {
    --containershadow: #a3b18a;
    --offwhite: #e9fce0;
    --white: #f6fdf6;
    --text: #175872;
    --textshadow: #5b8a6f;
    --button: #5f8a6d;
    --buttonshadow: #133622;
}

/* GLOBAL ELEMENTS */

*, *:before, *:after {
  box-sizing: border-box;
}
html, body{
    height: 100%;
    background-image: linear-gradient(to top right,var(--offwhite),var(--offwhite));
    font-family: 'Noto Sans JP', sans-serif;
}
h1{
    color: var(--textshadow);
    font-size: 28px;
    font-weight: 300;
}
.container{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 500px;
  max-width: 100%;
  height: 100%;
  padding:10px;
  background-color: var(--white);
  text-align: center;
  box-shadow: 0px 15px 35px var(--containershadow);
}
.logo{
  margin: auto;
  margin-top: 60px;
  margin-bottom: 10px;
}
.button{
  background-color: var(--button);
  border: 0px;
  padding: 15px;
  margin-top: 20px;
  border-radius: 15px;
  color: var(--white);
  text-decoration: none;
  cursor: grab;
  font-size: x-large;
  min-width: max-content;
}
.button:hover{
  background-color: var(--containershadow);
}
.back{
  padding: 0px;
  color: #ffa856;
  border-radius: 12px;
  position: absolute;
  top: 20px;
  left: 20px;
}
.icon{
  padding: 10px;
  color: var(--button);
  border-radius: 12px;
}
.material-icons.top{
  margin: 30px;
  color: #ffa856;
}
.material-icons{
  margin: 5px;
  color: var(--white);
}
.material-icons:hover{
  color: var(--containershadow);
}
.info{
  color: #ffa856;
}

fieldset{
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 100%;
  border: 0;
}
input[type=text], input[type=password] {
  padding:15px;
  margin: 20px;
  border:0;
  border-radius: 12px;
  box-shadow:0 0 5px 4px rgba(0,0,0,0.06);
  width: 100%;
  font-size: x-large;
}
::placeholder{
  opacity: 0.6;
}

/* LOGIN */
.login{
  width: 75%;
}
.login-form{
  margin-bottom: 30px; 
} 
.loginb{
  width: 32%;
}
.signup{
  background-color: #8ac926;
  width: 20%;
}

/* UPLOAD */
.captured{
  width: 80%;
}
.cameraControls {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
  width: 25%;
  margin: auto;
}
.upload{
  margin: auto;
  margin-top: 10px;
}
.retakephoto{
  margin-top: 130px;
}

/* LOADING */
.progressBar{
    position: relative;
    width: 85%;
    height: 3em;
    margin: auto;
    margin-top: 400px;
    background-image: linear-gradient(to top right,var(--button),var(--buttonshadow));
    border-radius: 1.5em;
}
.progressBar::before {
    content: '';
    display: flex;
    align-items: center;
    position: absolute;
    left: .5em;
    top: .5em;
    bottom: .5em;
    min-width: .2rem;
    max-width: calc(85% - 1em);
    width: calc(var(--width, 0) * 1%);
    background-image: linear-gradient(to top right,var(--offwhite),var(--white));
    border-radius: 1em;
    padding: 1em;
}

/* HOME */
.logout{
  margin-top: 0px;
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}
#welcome{
  margin: 0;
  margin-left: 20px;
  margin-right: 20px;
  margin-bottom: 30px;
  padding: 0;
  display: flex;
  flex-direction: row;
  justify-content: start;
  align-items: center;
}
h1.home{
  margin: 0;
  padding: 0;
  margin-right: 90px;
  text-align: start;
}
#points{
  width: fit-content;
  border-radius: 50px;
  background-color: #5b8a6f;
  padding-left: 5px;
  padding-right: 5px;
  margin-left: 90px;
}
#points p{
  padding: 5px;
  font-style: italic;
  margin: 0;
  color: var(--white);
}
.tray {
  width: 75%;
  margin-bottom: 60px;
  border-radius: 50px;
  padding: 0px;
  background-color: #6b916a;
  display: flex;
  justify-content: space-around;
  align-items: center;
  box-shadow: 0 3px 7px #b6bdb2;
}
.icon.cam-bubble{
  background-color: #ffa856;
  border-radius: 50%;
}

.material-icons.cam{
  font-size: 48px;
}

/* FOOD LOG */
th{
  color: #89bb68;
}
table td{
  padding: 5px;
  width:100px
}
table td#food{
  padding: 10px;
}
table tr:nth-child(even){
  background-color: #f2f2f2;
}
table{
  table-layout: auto;
}
thead,
tbody {
  display: block;
}
tbody {
  max-height: 500px;
  overflow: auto;
}

th{
  background-color: #f2f2f2;
}

#ruMenu-table {
  margin-top: 30px;
}

.getMenu .button {
  margin: 0;
}

/* STATS */
#byWeek-table{
  margin-top: 30px;
}

/* MEDIA QUERIES */ 
@media only screen and (min-width:500px){
    .container{
      width: 550px;
      height: 95vh;
      min-height: 715px;
      border-radius: 12px; 
    }
    #errorMsg {
      position: fixed;
      top: 32vh;
      left: 20vw;
      padding: 20px;
      z-index: 999999;
    }
    .form-control.webcam-on {
      top: 17vh;
      left: 0;
    }
} 

@media screen and (min-width: 1024px) {
  .form-control.webcam-on {
    top: 16vh;
    left: 8vw;
  }
} 

 
@media screen and (max-width: 420px) {
  .form-control.webcam-start{
    width: 300px;
  }
}

